<?xml version="1.0" encoding="utf-8"?>
<androidx.coordinatorlayout.widget.CoordinatorLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:fitsSystemWindows="true"
    tools:context=".MainActivity3">
    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">
        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <ImageView
                android:id="@+id/imageView2"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:src="@drawable/top_background"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.523"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <TextView
                android:layout_width="@dimen/widle"
                android:layout_height="@dimen/hidle"
                android:layout_marginStart="@dimen/mar_st"
                android:layout_marginTop="@dimen/martopi"
                android:text="@string/create_account"
                android:textAllCaps="false"
                android:textColor="@color/white"
                android:textSize="@dimen/textgl"
                android:textStyle="bold"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <ImageView
                android:layout_width="@dimen/dew_we"
                android:layout_height="@dimen/dew_he"
                android:layout_marginTop="@dimen/mar_dew"
                android:layout_marginEnd="@dimen/for_m"
                android:src="@drawable/women1"
                app:layout_constraintEnd_toEndOf="@+id/imageView2"
                app:layout_constraintTop_toTopOf="parent" />

            <EditText
                android:id="@+id/editText"
                android:layout_width="@dimen/textp_w"
                android:layout_height="@dimen/textp_h"
                android:layout_marginStart="@dimen/mar_t"
                android:layout_marginTop="@dimen/martope"
                android:layout_marginEnd="@dimen/mar_t"
                android:background="@drawable/bot2"
                android:gravity=""
                android:hint="@string/enter_your_email"
                android:textColorHint="@color/C4C0C2"
                android:textAllCaps="false"
                android:textColor="@color/_717171"
                android:paddingStart="@dimen/pad"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/imageView2" />

            <TextView
                android:layout_width="@dimen/layout_m"
                android:layout_height="@dimen/lay_mab"
                android:layout_marginStart="@dimen/stmarw"
                android:text="@string/your_email"
                android:textColor="@color/_5325"
                android:textSize="@dimen/mar_t"
                android:textStyle="bold"
                app:layout_constraintBottom_toTopOf="@+id/editText"
                app:layout_constraintStart_toStartOf="parent"
                />

            <TextView
                android:layout_width="@dimen/layout_m"
                android:layout_height="@dimen/lay_mab"
                android:layout_marginStart="@dimen/stmarw"
                android:layout_marginBottom="@dimen/marginbot"
                android:text="@string/your_password"
                android:textColor="@color/_5325"
                android:textSize="@dimen/mar_t"
                android:textStyle="bold"
                app:layout_constraintBottom_toTopOf="@+id/editText2"
                app:layout_constraintStart_toStartOf="parent"
                />

            <TextView
                android:layout_width="@dimen/widle"
                android:layout_height="@dimen/lay_mab"
                android:layout_marginStart="@dimen/stmarw"
                android:layout_marginBottom="@dimen/for_m"
                android:text="@string/repeat_password"
                android:textColor="@color/_5325"
                android:textSize="@dimen/mar_t"
                android:textStyle="bold"
                app:layout_constraintBottom_toTopOf="@+id/editText3"
                app:layout_constraintStart_toStartOf="parent"
                />

            <EditText
                android:id="@+id/editText2"
                android:layout_width="@dimen/textp_w"
                android:layout_height="@dimen/textp_h"
                android:layout_marginTop="@dimen/margintop"
                android:background="@drawable/bot2"
                android:gravity=""
                android:hint="@string/enter_your_password"
                android:textColorHint="@color/C4C0C2"
                android:textAllCaps="false"
                android:textColor="@color/_717171"
                android:paddingStart="@dimen/pad"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/editText" />

            <EditText
                android:id="@+id/editText3"
                android:layout_width="@dimen/textp_w"
                android:layout_height="@dimen/textp_h"
                android:layout_marginTop="@dimen/textp_h"
                android:background="@drawable/bot2"
                android:gravity=""
                android:hint="@string/enter_your_password_again"
                android:textColorHint="@color/C4C0C2"
                android:textAllCaps="false"
                android:textColor="@color/_717171"
                android:paddingStart="@dimen/pad"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/editText2" />

            <androidx.appcompat.widget.AppCompatButton
                android:id="@+id/appCompatButton3"
                android:layout_width="@dimen/lay_wt"
                android:layout_height="@dimen/lay_ht"
                android:layout_marginStart="@dimen/startmm"
                android:layout_marginTop="@dimen/lay_mab"
                android:layout_marginEnd="@dimen/startmm"
                android:background="@drawable/bot3"
                android:foregroundGravity="center_horizontal"
                android:drawableEnd="@drawable/circle"
                android:text="@string/register"
                android:drawablePadding="-53dp"
                android:paddingEnd="5dp"
                android:textAllCaps="false"
                android:textColor="@color/white"
                android:textSize="@dimen/textmin"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/editText3" />

            <TextView
                android:id="@+id/textView3"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="@dimen/bottt"
                android:layout_marginTop="@dimen/bottt"
                android:gravity="center"
                android:text="@string/already_have_an_account"
                android:textColor="@color/_5325"
                android:textSize="@dimen/texs"
                android:textStyle="bold"
                app:layout_constraintBottom_toTopOf="@+id/logins"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/appCompatButton3" />

            <androidx.appcompat.widget.AppCompatButton
                android:id="@+id/logins"
                android:layout_width="@dimen/lay_wt"
                android:layout_height="@dimen/lay_ht"
                android:layout_marginStart="@dimen/startmm"
                android:layout_marginEnd="@dimen/startmm"
                android:layout_marginBottom="@dimen/tex_m"
                android:background="@drawable/bot1"
                android:text="@string/login"
                android:textAllCaps="false"
                android:textColor="@color/btntxt"
                android:textSize="@dimen/textmin"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                />
        </androidx.constraintlayout.widget.ConstraintLayout>
    </ScrollView>

</androidx.coordinatorlayout.widget.CoordinatorLayout>